--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <a href="https://google.com">Go too Google</a>
     <a href="https://google.com">Google!!!</a>
     <h1>Haeding</h1>
     <h2>Heading</h2>
+    <img class="image" src="./pictures/00000000 copy.jpg" alt="larlem">
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maiores
       vitae officia consectetur possimus? Totam ex, adipisci sunt consequuntur
