--- a/index.html
+++ b/index.html
@@ -7,64 +7,59 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <a href="https://google.com">Go too Google</a>
-    <a href="https://google.com">Google!!!</a>
-    <h1>Haeding</h1>
-    <h2>Heading</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora
-      molestias aspernatur praesentium officia cupiditate voluptates,
-      consequatur eius, quo, natus mollitia deleniti quaerat voluptatibus
-      consequuntur dolores nostrum maiores sint enim dolore vitae quae cumque
-      nemo alias? Quaerat a quod quia architecto voluptates excepturi tenetur
-      velit impedit, temporibus aperiam ducimus inventore fugit repellendus
-      debitis voluptatum distinctio beatae, quasi dolorem nisi adipisci
-      repudiandae vero, dicta quo laboriosam. C <span>um inventore beatae eligendi quas
-        fugit, nulla ex. Nam, culpa omnis. Quaerat aspernatur laudantium harum
-        porro repellat voluptatibus ipsa expedita. Quidem adipisci voluptatem et
-        asperiores eligendi fugiat velit assumenda quisquam, fugit illum! Dolore
-        doloremque quod aperiam, molestiae libero officia, mollitia repellendus
-        veritatis illo odio alias accusantium ipsa enim excepturi distinctio</span>
-      facilis rem earum temporibus eos eum ea perspiciatis dolor ipsam! Quos
-      quia autem dolorum explicabo excepturi iste vero, qui est consequatur
-      perferendis eum illum a eius sunt quod non natus tempore esse deleniti
-      nobis cum hic necessitatibus, pariatur enim? Possimus deserunt natus sit
-      earum, quae aperiam facilis libero cum esse nobis velit perspiciatis
-      culpa, provident mollitia est reprehenderit veritatis aspernatur laborum
-      voluptatibus harum fugit odit cupiditate iure numquam? Ea ut, labore
-      dolore sequi nisi in non neque, natus minus cum eos error nesciunt
-      laboriosam totam unde.
-    </p>
-    <span><img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" /></span>
-    
-    
-    <img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" />
-    <div><img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" /></div>
-    <img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" />
-    <img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" />
-    <img class="image" src="./pictures/00000000 copy.jpg" alt="larlem" />
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque maiores
-      vitae officia consectetur possimus? Totam ex, adipisci sunt consequuntur
-      deserunt deleniti vero voluptates vitae id laboriosam a ad ea. Fugiat quod
-      laborum, voluptatum numquam et magnam beatae expedita aperiam voluptates
-      temporibus. Magnam, reprehenderit minima vero dolorum exercitationem
-      voluptate explicabo soluta sequi perspiciatis excepturi provident est
-      maiores natus quasi enim, unde mollitia velit fugiat eaque maxime
-      distinctio id assumenda! Iusto nobis culpa dolore unde id placeat repellat
-      autem optio et asperiores cupiditate facilis, consequatur, doloremque nisi
-      illo praesentium quisquam earum ex corporis dignissimos commodi. Ipsum
-      inventore sed quae hic dolorum ut soluta consectetur tempore libero
-      cupiditate laborum omnis earum accusantium itaque consequuntur modi autem
-      architecto dolorem, deserunt id ullam eius velit nisi. Ullam atque
-      tempora, quam facilis ipsam molestiae recusandae, iure ex aliquam ducimus
-      maxime eveniet saepe, inventore itaque. Ducimus, ab! Dolorem pariatur non
-      dolore ex dignissimos error ducimus? Illum temporibus, praesentium dolore
-      ex aut doloribus iusto sunt nihil voluptates adipisci deleniti nam eos,
-      accusamus neque in ab, quaerat a quia delectus quibusdam? Labore ab
-      incidunt eveniet distinctio animi, cum sit porro saepe est consequatur
-      aperiam id vitae. Sed ea earum odio dolorem impedit non in quidem ducimus
-      voluptates. Aspernatur, ut?
-    </p>
+    <table>
+      <caption>Taxes</caption>
+      <thead>
+        <tr>
+          <th></th>
+          <th>week day
+            <th>Taxes</th>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>Monday</td>
+          <td class="text-center">10$</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Tuesday</td>
+          <td class="text-center">15$</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Wednesday</td>
+          <td class="text-center">9$</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Thursday</td>
+          <td class="text-center">10$</td>
+        </tr>
+        <tr>
+          <td>5</td>
+          <td>Friday</td>
+          <td class="text-center">12$</td>
+          <td>free for the employees</td>
+          <tr>
+            <td rowspan="2">6-7</td>
+            <td rowspan="2">weekend</td>
+            <td class="text-center">25$ for employees</td>
+          </tr>
+          <tr>
+            <td class="text-center">35$ for all employees</td>
+          </tr>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="2">total</th>
+          <td  colspan="2" class="text-center">$$$</td>
+        </tr>
+      </tfoot>
+    </table>
+ 
   </body>
 </html>
