--- a/index.html
+++ b/index.html
@@ -7,59 +7,55 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table>
-      <caption>Taxes</caption>
-      <thead>
-        <tr>
-          <th></th>
-          <th>week day
-            <th>Taxes</th>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Monday</td>
-          <td class="text-center">10$</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Tuesday</td>
-          <td class="text-center">15$</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Wednesday</td>
-          <td class="text-center">9$</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Thursday</td>
-          <td class="text-center">10$</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Friday</td>
-          <td class="text-center">12$</td>
-          <td>free for the employees</td>
-          <tr>
-            <td rowspan="2">6-7</td>
-            <td rowspan="2">weekend</td>
-            <td class="text-center">25$ for employees</td>
-          </tr>
-          <tr>
-            <td class="text-center">35$ for all employees</td>
-          </tr>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th colspan="2">total</th>
-          <td  colspan="2" class="text-center">$$$</td>
-        </tr>
-      </tfoot>
-    </table>
+  <table>
+    <caption>Invoce</caption>
+  <thead>
+    <tr>
+      <th class="center">item/desc</th>
+      <th>qty</th>
+      <th>@</th>
+      <th>price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>papers box</td>
+      <td>100</td>
+      <td>115</td>
+      <td>115.00</td>
+    </tr>
+    <tr>
+      <td>paper case</td>
+      <td>10</td>
+      <td>45.33</td>
+      <td>459.00</td>
+    </tr>
+    <tr>
+      <td>wastepaper baskets</td>
+      <td>2</td>
+      <td>17.99</td>
+      <td>35.00</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <th colspan="3"> subtotal</th>
+      <td>610/00</td>
+    </tr>
+    <tr>
+      <th colspan="2"> tax</th>
+      <td>7$$$</td>
+      <td>43.00</td>
+    </tr>
+    <tr>
+   <th colspan="3">total</th>
+      <td>543.00</td>
+    </tr>
+  </tfoot>
+  </table>
+
+      
+     
  
   </body>
 </html>
