--- a/index.html
+++ b/index.html
@@ -7,55 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-  <table>
-    <caption>Invoce</caption>
-  <thead>
-    <tr>
-      <th class="center">item/desc</th>
-      <th>qty</th>
-      <th>@</th>
-      <th>price</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>papers box</td>
-      <td>100</td>
-      <td>115</td>
-      <td>115.00</td>
-    </tr>
-    <tr>
-      <td>paper case</td>
-      <td>10</td>
-      <td>45.33</td>
-      <td>459.00</td>
-    </tr>
-    <tr>
-      <td>wastepaper baskets</td>
-      <td>2</td>
-      <td>17.99</td>
-      <td>35.00</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th colspan="3"> subtotal</th>
-      <td>610/00</td>
-    </tr>
-    <tr>
-      <th colspan="2"> tax</th>
-      <td>7$$$</td>
-      <td>43.00</td>
-    </tr>
-    <tr>
-   <th colspan="3">total</th>
-      <td>543.00</td>
-    </tr>
-  </tfoot>
-  </table>
+    <div>1</div>
 
-      
-     
- 
   </body>
 </html>
