--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>1</div>
+    <navigation>
+    <ul class="link-list">
+      <li><a href="#" class="page-link">page 1</a></li>
+      <li><a href="#" class="page-link">page 2</a></li>
+      <li><a href="#" class="page-link">page 3</a></li>
+      <li><a href="#" class="page-link">page 4</a></li>
+      <li><a href="#" class="page-link">page 5</a></li>
+    </ul>
+   </navigation>
 
   </body>
 </html>
