--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <navigation>
     <ul class="link-list">
-      <li><a href="#" class="page-link">page 1</a></li>
-      <li><a href="#" class="page-link">page 2</a></li>
-      <li><a href="#" class="page-link">page 3</a></li>
-      <li><a href="#" class="page-link">page 4</a></li>
-      <li><a href="#" class="page-link">page 5</a></li>
+      <li><a href="https://www.google.com" class="page-link">page 1</a></li>
+      <li><a href="https://www.google.com" class="page-link">page 2</a></li>
+      <li><a href="https://www.google.com" class="page-link">page 3</a></li>
+      <li><a href="https://www.google.com" class="page-link">page 4</a></li>
+      <li><a href="https://www.google.com" class="page-link">page 5</a></li>
     </ul>
    </navigation>
+   <input type="text">
 
   </body>
 </html>
