--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <navigation>
-    <ul class="link-list">
-      <li><a href="https://www.google.com" class="page-link">page 1</a></li>
-      <li><a href="https://www.google.com" class="page-link">page 2</a></li>
-      <li><a href="https://www.google.com" class="page-link">page 3</a></li>
-      <li><a href="https://www.google.com" class="page-link">page 4</a></li>
-      <li><a href="https://www.google.com" class="page-link">page 5</a></li>
-    </ul>
-   </navigation>
-   <input type="text">
-
+    <nav class="avigation">
+      <ul class="link-list">
+        <li><a href="https://www.google.com" class="page-link">page 1</a></li>
+        <li><a href="https://www.google.com" class="page-link">page 2</a></li>
+        <li><a href="https://www.google.com" class="page-link">page 3</a></li>
+        <li><a href="https://www.google.com" class="page-link">page 4</a></li>
+        <li><a href="https://www.google.com" class="page-link">page 5</a></li>
+      </ul>
+    </nav>
+    <input type="text" />
   </body>
 </html>
