--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="https://www.google.com" class="page-link">page 5</a></li>
       </ul>
     </nav>
+    <h2> 1 список</h2>
     <ul>
       <li>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem illo
@@ -48,6 +49,7 @@
         architecto in nam!
       </li>
     </ul>
+    <h2>2 список</h2>
     <ul>
       <li>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam,
