prackice nth-child

--- a/index.html
+++ b/index.html
@@ -7,81 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="avigation">
-      <ul class="link-list">
-        <li><a href="https://www.google.com" class="page-link">page 1</a></li>
-        <li><a href="https://www.google.com" class="page-link">page 2</a></li>
-        <li><a href="https://www.google.com" class="page-link">page 3</a></li>
-        <li><a href="https://www.google.com" class="page-link">page 4</a></li>
-        <li><a href="https://www.google.com" class="page-link">page 5</a></li>
-      </ul>
-    </nav>
-    <h2> 1 список</h2>
-    <ul>
-      <li>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem illo
-        nobis quis similique obcaecati labore aspernatur sequi cumque quisquam
-        voluptate.
-      </li>
-      <li>
-        Officia eos deleniti, deserunt quos iusto laboriosam voluptatem porro
-        ratione id unde quo dolorum inventore sunt vero distinctio possimus
-        nemo!
-      </li>
-      <li>
-        Possimus, cupiditate provident error sit illum recusandae exercitationem
-        rerum eius enim consequuntur voluptate soluta aspernatur sint architecto
-        minima blanditiis ea!
-      </li>
-      <li>
-        Nesciunt nam rerum aspernatur dolorum cumque magni qui adipisci
-        praesentium expedita quidem labore officiis doloremque sed, aliquid
-        voluptate molestiae optio?
-      </li>
-      <li>
-        Totam recusandae iste officiis perferendis voluptas pariatur earum eaque
-        est quibusdam ratione, vitae minus accusantium ducimus provident
-        quisquam? Reiciendis, voluptatum.
-      </li>
-      <li>
-        Ducimus dignissimos suscipit illo quis libero! Magnam, assumenda hic,
-        laborum deleniti illum possimus esse animi culpa perspiciatis,
-        architecto in nam!
-      </li>
-    </ul>
-    <h2>2 список</h2>
-    <ul>
-      <li>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam,
-        placeat cum? Temporibus, labore suscipit nesciunt nobis minima saepe ab
-        expedita!
-      </li>
-      <li>
-        Nisi aspernatur culpa eaque ducimus ad nihil accusantium! Quibusdam
-        similique aliquid earum cupiditate asperiores eligendi corporis omnis
-        doloribus cumque ipsum.
-      </li>
-      <li>
-        Accusantium, delectus quibusdam tempora commodi hic minus modi laborum
-        debitis recusandae odio tempore quae itaque magnam numquam repellendus
-        fugiat esse.
-      </li>
-      <li>
-        Asperiores dolorem quod commodi ex quibusdam, voluptatem beatae aperiam,
-        laborum ipsam ipsum qui debitis cupiditate delectus nostrum, accusamus
-        incidunt voluptas?
-      </li>
-      <li>
-        Deserunt illo omnis nam. Tempora nisi distinctio eaque sint vel,
-        assumenda accusamus sequi perspiciatis incidunt impedit, voluptatibus
-        reiciendis dolorem beatae!
-      </li>
-      <li>
-        Sit provident omnis pariatur unde sint natus architecto deserunt,
-        aperiam voluptate adipisci totam! Eum error eveniet nobis totam, culpa
-        officiis?
-      </li>
-    </ul>
-    <input type="text" />
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
   </body>
 </html>
