--- a/index.html
+++ b/index.html
@@ -7,39 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main>
-      <article>
-        <h1>heading 1</h1>
-        <p class="paragraph">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-          voluptatibus earum, asperiores iusto blanditiis vero repellat.
-          Voluptatem nemo tenetur quisquam!
-        </p>
-        <ul>
-          <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-            autem.
-          </li>
-          <li>
-            Cum quos accusantium perferendis et architecto tenetur dolor quia
-            corrupti.
-          </li>
-          <li>
-            Repudiandae fugiat eius laborum iure officia consequatur ut ipsa id.
-          </li>
-          <li>
-            Nihil facere veniam beatae nobis earum aperiam sunt impedit velit.
-          </li>
-          <li>
-            Explicabo alias obcaecati doloremque quibusdam, eius quod? Dolores,
-            cupiditate provident.
-          </li>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum,
-            quidem.
-          </p>
-        </ul>
-      </article>
-    </main>
+   <div class="container">
+    <div class="wrapper">
+      <div class="inner div1 ">1</div>
+      <div class="inner div2">2</div>
+      <div class="inner div3">3</div>
+      <div class="inner div4">4</div>
+    </div>
+   </div>
   </body>
 </html>
