Nav list-full done

--- a/index.html
+++ b/index.html
@@ -7,13 +7,96 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-    <div class="wrapper">
-        <div class="inner">1</div>
-        <div class="inner">2</div>
-        <div class="inner">3</div>
-        <div class="inner">4</div>
-      </div>
-      </div>
+    <!-- 
+    1. navigation (nav)
+     2. list items
+      3.sub-list 
+       4.sub-sub-list
+        5. sub-sub-sub-list-->
+
+    <nav>
+      <ul class="nav-list">
+        <li class="list-item"><a href="#" class="link">Home</a></li>
+        <li class="list-item"><a href="#" class="link">WordPress+</a></li>
+        <li class="list-item">
+          <a href="#" class="link">Web Desing+</a>
+          <ul class="sab-nav-list">
+            <li class="sab-list-item"><a href="#" class="link">Resours</a></li>
+            <li class="sab-list-item"><a href="#" class="link">Links</a></li>
+            <li class="sab-list-item">
+              <a href="#" class="link">Tutorials+</a>
+              <ul class="sab-sab-nav-list">
+                <li class="sab-sab-list-item">
+                  <a href="#" class="link">HTML/CSS</a>
+                </li>
+                <li class="sab-sab-list-item">
+                  <a href="#" class="link">jQuery</a>
+                </li>
+                <li class="sab-sab-list-item">
+                  <a href="#" class="link">Others+</a>
+                  <ul class="sab-sab-sab-nav-list">
+                    <li class="sab-sab-sab-list-item"><a href="#"class="link">Staff</a></li>
+                    <li class="sab-sab-sab-list-item"><a href="#"class="link">Things</a></li>
+                    <li class="sab-sab-sab-list-item"><a href="#"class="link">Other Staff</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li class="list-item"><a href="#" class="link">Graphik Desing</a></li>
+        <li class="list-item"><a href="#" class="link">Inspiration</a></li>
+        <li class="list-item"><a href="#" class="link">Contact</a></li>
+        <li class="list-item"><a href="#" class="link">Home</a></li>
+      </ul>
+    </nav>
+    <main>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero quibusdam
+        est ducimus iste nemo sit ratione dignissimos reprehenderit recusandae,
+        distinctio quaerat nostrum debitis qui atque, nisi ex pariatur.
+        Asperiores explicabo nobis omnis, sit modi id ducimus, accusamus quam
+        rerum tempora fugiat rem quae laudantium aperiam delectus corporis nam
+        voluptate molestiae. Itaque assumenda, perspiciatis natus vitae incidunt
+        est officia suscipit veniam eveniet deleniti autem. Suscipit in eum
+        blanditiis iste, incidunt magnam. Repudiandae vero dolores, quae
+        expedita accusamus aperiam ducimus quos unde rem in mollitia corporis
+        dicta inventore doloremque sapiente facilis, eum maiores optio sequi est
+        atque, delectus quibusdam voluptate sed? Eveniet adipisci doloribus
+        voluptas iste. Voluptate placeat soluta excepturi quis, perspiciatis
+        accusamus laudantium ex. Doloribus mollitia nesciunt saepe numquam? Quas
+        molestias libero facere quidem fugiat ea, cupiditate, dolore adipisci
+        eos dolorum alias consequuntur sed nostrum harum. Sunt, dignissimos
+        totam minima alias temporibus sapiente qui architecto vel consequuntur.
+        Fugit ratione autem reprehenderit earum possimus omnis animi aliquam
+        facilis laborum sint, sunt nobis impedit dolores odio delectus assumenda
+        consectetur praesentium sapiente neque adipisci. Pariatur nesciunt dicta
+        autem eos! Repellendus totam voluptatem soluta cumque omnis fuga
+        nesciunt consequatur placeat iste, nihil in inventore sunt consequuntur
+        quasi id. Error fugit vero vitae maiores ut perspiciatis sit sunt amet
+        dolore consectetur ad dolor accusamus magnam mollitia vel dignissimos
+        eius voluptates, facilis iste! Quam accusamus unde in quasi rerum
+        praesentium eos autem laudantium, aperiam vero repellendus ea placeat
+        natus, id molestias dolores. Excepturi vero, laboriosam non illo est eum
+        obcaecati pariatur quisquam molestias assumenda necessitatibus veritatis
+        placeat vel voluptatibus tempore dolores eligendi fugiat corrupti
+        accusantium in maiores beatae quam nesciunt. Laudantium deserunt maxime
+        corporis perferendis ullam nostrum saepe ratione earum nisi dolores,
+        excepturi, dolor accusamus sequi recusandae hic necessitatibus expedita,
+        cupiditate minima maiores voluptas amet! Sapiente distinctio deserunt
+        iste quis voluptatem unde debitis, dolore ipsum provident quod
+        perferendis labore eligendi corrupti sint fuga in! Temporibus autem
+        magnam, quam itaque dolor enim, cum error rem vitae mollitia saepe?
+        Veniam voluptates quos unde molestias, quibusdam voluptate dolorum fuga
+        optio doloribus laboriosam nihil delectus corporis enim, atque ad
+        exercitationem soluta mollitia beatae rerum. Cum, porro. Soluta culpa
+        qui minus aut officiis, sunt necessitatibus exercitationem modi
+        laudantium. Nisi ducimus suscipit, rem sunt dolorem magni ratione
+        repudiandae consequuntur saepe ex sit quibusdam minima dignissimos
+        facilis numquam maiores nostrum et laborum fuga similique eius! Sit
+        veritatis error porro culpa debitis assumenda officiis similique earum?
+        Atque odit quam dicta assumenda minus sequi sunt iure?
+      </p>
+    </main>
   </body>
 </html>
