--- a/index.html
+++ b/index.html
@@ -4,25 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <main>
-      <article>
-        <h1>Heading</h1>
-        <p>
-          Wall ipsum dolor, sit amet consectetur adipisicing elit. Veritatis
-          rerum facilis aperiam impedit veniam dolorum vero ullam labore et
-          libero?
-        </p>
-        <ul>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-          <li>Item 5</li>
-        </ul>
-      </article>
-    </main>
+   <div>
+    <!-- !дочірні вкладені елементи   </div> -->
   </body>
 </html>
