--- a/index.html
+++ b/index.html
@@ -7,31 +7,18 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <section class="card-container">
-      <div class="header"></div>
-      <article class="card">
-        <img class="user-img"
-          src="./pictures/cat-sitting-on-a-silver-laptop_Simon-Hrozian_Unsplash.jpg"
-          alt="user avatar"
-        />
-        <h2>Jonathan Robertson</h2>
-        <h3>Creative Manager</h3>
-
-        <section class="links">
-          <div>
-            <p>323</p>
-            <span>followers</span>
-          </div>
-          <div>
-            <p>290</p>
-            <span>following</span>
-          </div>
-          <div>
-            <p>22</p>
-            <span>stories</span>
-          </div>
-        </section>
-      </article>
-    </section>
+    <form class="form">
+      <h2>Sign In</h2>
+      <!-- 1 спосіб: id -->
+      <label for="email-form">Enter your email</label>
+      <input type="text" placeholder="Enter your email"  autofocus id="email-form"/>
+      <!-- 2 спосіб: вкладення input в lable -->
+      <label for="">nter your password
+        <input type="password"  placeholder="Enter your password"/>
+      </label>
+      
+      <button type="submit">Sign In</button>
+      <button type="reset">Reset</button>
+    </form>
   </body>
 </html>
