--- a/index.html
+++ b/index.html
@@ -73,18 +73,15 @@
       </fieldset>
       <fieldset>
         <legend>Choose your city</legend>
-        <select name="city">
-          <option value="Kyiv">Київ</option>
-          <option value="Kovel">Ковель</option>
-        
-          <option value="Kharkiv">Харків</option>
-        <optgroup label="Дніпропетровська область">
-          <option value="Dnipro">Дніпро</option>
-          <option value="Kryvyi-Rig">Кривий ріг</option>
-        </optgroup>
-        </select>
+        <input type="text" name="city" list="city-list" />
+        <datalist id="city-list">
+          <option value="Kyiv"></option>
+          <option value="Kovel"></option>
+          <option value="Kharkiv"></option>
+          <option value="Dnipro"></option>
+          <option value="Kryvyi-Rig"></option>
+        </datalist>
       </fieldset>
-
       <label class="required">
         <input required type="checkbox" name="is-agree" checked />
         Чи погоджуєтесь ви з нашою політикою?
