--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <option value="Kryvyi-Rig"></option>
         </datalist>
       </fieldset>
+      <textarea placeholder="Опишіть себе"></textarea>
       <label class="required">
         <input required type="checkbox" name="is-agree" checked />
         Чи погоджуєтесь ви з нашою політикою?
