--- a/index.html
+++ b/index.html
@@ -7,93 +7,86 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <h1>Форма зворотнього зв`язку</h1>
     <form>
-      <label>
-        Імя
-        <input
-          required
-          type="text"
-          name="username"
-          placeholder="Вадим"
-          autofocus
-        />
-      </label>
-      <label class="required">
-        Електронна пошта
-        <input
-          type="text"
-          name="email"
-          placeholder="example@email.com"
-          pattern="[^@ \t\r\n]+@[^@ \t\r\n]+\.[^@ \t\r\n]+"
-        />
-      </label>
-      <label>
-        Пароль
-        <input
-          type="password"
-          name="password"
-          placeholder="qwerty1234"
-          pattern="^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$ %^&*-]).{8,}$"
-        />
-      </label>
-      <label>
-        Телефон
-        <input type="text" name="phone" placeholder="08887777777" />
-      </label>
-      <label>
-        Адреса
-        <input
-          type="text"
-          name="address"
-          placeholder="вул. Лесі Українки ..."
-        />
-      </label>
-      <label>
-        Дата народження
-        <input type="date" name="birthdate" placeholder="12.12.1234" />
-      </label>
       <fieldset>
-        <legend>Choose your ender</legend>
+       <legend> Особисті дані</legend>
         <label>
-          <input type="radio" value="Male" name="gender" checked />
-          Male
+          Ім`я
+          <input type="text" name="name" required />
         </label>
         <label>
-          <input type="radio" value="Female" name="gender" />
-          Female
+          Електронна пошта
+          <input type="email" name="email" required />
         </label>
         <label>
-          <input type="radio" value="Nonbinary" name="gender" />
-          Nonbinary
+          Дата народження
+          <input type="date" name="bisd" required />
         </label>
       </fieldset>
-      <fieldset>
-        <legend>Choose your avatar</legend>
-        <input name="avatar" type="file" multiple />
-      </fieldset>
-      <fieldset>
-        <legend>Choose your city</legend>
-        <input type="text" name="city" list="city-list" />
-        <datalist id="city-list">
-          <option value="Kyiv"></option>
-          <option value="Kovel"></option>
-          <option value="Kharkiv"></option>
-          <option value="Dnipro"></option>
-          <option value="Kryvyi-Rig"></option>
-        </datalist>
-      </fieldset>
-      <textarea placeholder="Опишіть себе"></textarea>
-      <label class="required">
-        <input required type="checkbox" name="is-agree" checked />
-        Чи погоджуєтесь ви з нашою політикою?
-      </label>
-      <label>
-        <input type="checkbox" name="is-subscribed" checked />
-        Чи хочети ви отримувати від нас новини
-      </label>
 
-      <button type="submit">Зареєструватися</button>
-      <button type="reset">Очистити</button>
+      <fieldset>
+        <legend>Стать</legend>
+        <label>
+          <input type="radio" name="gender" value="male" />
+          Чоловік
+        </label>
+        <label>
+          <input type="radio" name="gender" value="female" />
+          Жінка
+        </label>
+        <label>
+          <input type="radio" name="gender" value="nonbinary" />
+          Небінарна персона
+        </label>
+      </fieldset>
+
+      <fieldset>
+        <legend>Додаткові налаштування</legend>
+        <label>
+          <input type="checkbox" name="is-subscribe" value="true" />
+          Підписатися на розсилку
+        </label>
+      </fieldset>
+
+      <fieldset class="center">
+        <legend>Оберіть категорію своїх інтересів</legend>
+        <select name="category">
+          <optgroup label="Технології">
+            <option value="programming">Програмування</option>
+            <option value="networks">Мережі</option>
+          </optgroup>
+          <optgroup label="Музика">
+            <option value="rock">Рок</option>
+            <option value="pop">Поп</option>
+          </optgroup>
+        </select>
+      </fieldset>
+
+      <fieldset>
+        <legend>Як ви дізналися про нас</legend>
+
+        <label >
+          <input type="radio" name="option" value="search-systems">
+          Пошукові системи
+        </label>
+
+        <label >
+          <input type="radio" name="option" value="social-networks">
+          Соціальні мережі
+        </label>
+        <label >
+          <input type="radio" name="option" value="friends">
+         Порада друзів
+        </label>
+      </fieldset>
+
+      <fieldset  class="center">
+        <legend>Опишіть свої враження, скарги, пропозиції</legend>
+        <textarea name="comment" ></textarea>
+      </fieldset>
+
+      <button type="submit">Надіслати форму</button>
     </form>
   </body>
 </html>
